<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/textDataAtual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/data_atual"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/texto_normal"
            android:textStyle="bold|italic"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textKm_Atual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/km_atual"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/texto_normal"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textLitrosAbastecidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/litros_abastecidos"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/texto_normal"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dataAtualAbastecimentoSimples"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/string_vazia"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/texto_normal"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/kmAtualAbastecimentoSimples"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/string_vazia"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/texto_normal"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/litrosAbastecimentoSimples"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/string_vazia"
            android:textColor="@color/color_texto"
            android:textSize="@dimen/texto_normal"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>